--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-
-  </body>
-</html>
+---
+layout: default
+title: Rishi Kothari, Developer
+---
+<div class="blurb">
+	<h1>$we --are "The Davis Robotics Club"</h1>
+	<p>You have probably heard of us. For updates, click <a href="blog/">here</a></p>
+  <p>For more about us, click <a href="about/">here</a></p>
+</div><!-- /.blurb -->
